Small bugfixes
- Icon overlap removed by removing the brightness filter
- Adjusted box shadow because there were a few pixels doing weird
- Card projector would show games that are from 1970, but they're actually not from 1970, I'm assuming those are null values. So from now on the website doesn't show games that are from 1970. (Because they don't exist anyway)

--- a/src/components/LandingPageSearchPanel.css
+++ b/src/components/LandingPageSearchPanel.css
@@ -63,15 +63,11 @@
 
   padding-left: 2.5px;
   padding-right: 2.5px;
-
-  filter: brightness(95%);
 }
 
 .logo-epic:hover {
   width: 53px;
   height: 76.25px;
-
-  filter: brightness(100%);
 }
 
 .logo-steam {
@@ -80,15 +76,11 @@
 
   padding-left: 2.5px;
   padding-right: 2.5px;
-
-  filter: brightness(95%);
 }
 
 .logo-steam:hover {
   width: 55px;
   height: 55px;
-
-  filter: brightness(100%);
 }
 
 .logo-gog {
@@ -97,15 +89,11 @@
 
   padding-left: 2.5px;
   padding-right: 2.5px;
-
-  filter: brightness(95%);
 }
 
 .logo-gog:hover {
   width: 55px;
   height: 55px;
-
-  filter: brightness(100%);
 }
 
 /* Max width for smart phones */
