--- a/src/components/PopularCardPanel.css
+++ b/src/components/PopularCardPanel.css
@@ -49,7 +49,7 @@
 }
 
 .popular-card-image:hover{
-  box-shadow: 0px 5px 8px 3px rgba(0, 0, 0, 0.342);
+  box-shadow: 0px 2px 8px 3px rgba(0, 0, 0, 0.342);
 }
 
 .popular-card-text-wrapper {
